<resources>
    <string name="app_name">Time Table</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="time">Time</string>
    <string name="note">Note</string>
    <string name="report">Report</string>
    <string name="setting">Setting</string>
    <string name="no_data">No Data</string>
    <string name="day">Day</string>
    <string name="subject">Subject</string>
    <string name="type_lecture_lab_etc">Type (lecture, lab etc.)</string>
    <string name="room">Room</string>
    <string name="teacher">Teacher</string>
    <string name="contact">Contact</string>
    <string name="notes">Notes</string>
    <string name="ends">Ends</string>
    <string name="_00_00">00:00</string>
    <string name="starts">Starts</string>
    <string name="write_here">Write here</string>
    <string name="type">Type</string>
    <string name="information">Information</string>
    <string name="__">--</string>
    <string name="action">Action</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="class_time">Class Time</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="present">Present</string>
    <string name="attendance">Attendance</string>
    <string name="_0_0">0.0</string>
    <string name="communicate">Communicate</string>
    <string name="thu">Kyaw Thu</string>
    <string name="_09750534996">09750534996</string>
    <string name="build_app">Build App</string>
    <string name="_13_8_2020">13.8.2020</string>
    <string name="developer">Developer</string>
    <string name="about">About</string>
    <string name="add_note">Add Note</string>
    <string name="add">Add</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="title">Title</string>
    <string name="_12">12</string>
    <string name="_2020">2020</string>
    <string name="_0">0</string>
    <string name="absent">Absent</string>
    <string name="submit">Submit</string>
    <string name="other_day">Other day</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="no_note">No Note</string>
    <string name="are_you_sure_want_to_submit">Are you sure want to submit?</string>
    <string name="ok">Ok</string>
    <string name="date">Date</string>
    <string name="record">Record</string>
    <string name="save_as">Save as</string>
    <string name="close">Close</string>
    <string name="cent">%</string>
    <string name="total">Total</string>
    <string name="left">Left</string>
    <string name="developed_by">Developed By</string>
    <string name="kyaw_thu">Kyaw Thu</string>
    <string name="copypaste673_gmail_com">copypaste673@gmail.com</string>
    <string name="build_app_13_8_2020">Build App : 13.8.2020</string>
    <string name="version_1">Version : 1</string>
    <string name="note_database">Note Database</string>
    <string name="time_database">Time Database</string>
    <string name="attendance_database">Attendance Database</string>
    <string name="widget">Widget</string>
    <string name="theme">Theme</string>
    <string name="data_list">Data List</string>
    <string name="default_database">Default Database</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="actionbar">ActionBar</string>
    <string name="layout">Layout</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="customize">Customize</string>
    <string name="time_cardview">Time CardView</string>
    <string name="note_cardview">Note CardView</string>
    <string name="data">Data</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="no_subject">No Subject</string>
    <string name="time_add_successfully">Time Add Successfully</string>
    <string name="no_database">No Database</string>
</resources>