<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp">
        <LinearLayout
            android:background="@drawable/spinner_background"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <TextView
            android:id="@+id/save"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:background="@color/colorTime"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/colorWhite"
            android:text="@string/save"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:id="@+id/layout"
            android:orientation="vertical"
            android:layout_margin="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/colorTextPrimary"
                    android:background="@drawable/spinner_background"
                    android:id="@+id/day"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_14ssp"
                    android:text="@string/day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/colorTextPrimary"
                    android:background="@drawable/spinner_background"
                    android:layout_weight="1"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_14ssp"
                    android:text="@string/report"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:gravity="center"
                    android:background="@drawable/spinner_background"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@drawable/ic_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:tint="@color/colorSelectedMenu"
                        android:contentDescription="@string/app_name" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:backgroundTint="@color/colorSelectedMenu"
                android:textColor="@color/colorWhite"
                android:background="@drawable/spinner_background"
                android:id="@+id/subject"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_14ssp"
                android:text="@string/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UnusedAttribute" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/colorTextPrimary"
                    android:background="@drawable/spinner_background"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/date"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@color/colorTextPrimary"
                    android:background="@drawable/spinner_background"
                    android:layout_weight="1"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/attendance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>