<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:paddingBottom="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/_14ssp"
        android:text="@string/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        android:background="@color/colorTextHint"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:paddingTop="@dimen/_10sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_12ssp"
            android:text="@string/actionbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:background="@drawable/rectangle_background"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp">
            <View
                android:layout_margin="1dp"
                android:id="@+id/actionBar_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:padding="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_12ssp"
            android:text="@string/layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:background="@drawable/rectangle_background"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp">
            <View
                android:layout_margin="1dp"
                android:id="@+id/layout_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:paddingLeft="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/radioGroup"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:checked="true"
                android:id="@+id/custom"
                android:text="@string/customize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/original_theme"
                android:text="Default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:padding="@dimen/_10sdp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_14ssp"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <View
            android:background="@color/colorDivider"
            android:layout_width="1dp"
            android:layout_height="@dimen/_20sdp"/>

        <TextView
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_14ssp"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:id="@+id/apply"
            android:text="@string/apply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
